--- a/app/src/main/res/layout/fragment_get_all_offer_fragemnt.xml
+++ b/app/src/main/res/layout/fragment_get_all_offer_fragemnt.xml
@@ -17,7 +17,8 @@
             app:layout_constraintBottom_toBottomOf="@+id/recycler_id_offer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_id_offer"
