--- a/app/src/main/res/layout/custom_image_reservation.xml
+++ b/app/src/main/res/layout/custom_image_reservation.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <com.ortiz.touchview.TouchImageView
         android:id="@+id/image_show_reservation"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
