--- a/app/src/main/res/layout/item_reservation.xml
+++ b/app/src/main/res/layout/item_reservation.xml
@@ -16,7 +16,7 @@
         >
 
 
-        <ImageView
+        <com.ortiz.touchview.TouchImageView
             android:id="@+id/image_id_item_resevation"
             android:layout_width="@dimen/_50sdp"
             android:layout_height="70dp"
